2006-01-18  Julien Puydt  <jpuydt@free.fr>

	* lib/toolbox/toolbox-gtk.c: Made it try several commands.

2006-01-17  Damien Sandras  <dsandras@gnome.org>
	
	* lib/gui/gmstockicons.h pixmaps/Makefile.am 
	src/gui/addressbook.cpp 
	pixmaps/gm-edit.png:
	Added for compatibility with older GTK versions.
	
2006-01-17  Damien Sandras  <dsandras@gnome.org>

	* configure.in, Makefile.am:
	More fixes for --disable-doc.

2006-01-17  Damien Sandras  <dsandras@gnome.org>

	* configure.in: Added --disable-doc support.

2006-01-17  Damien Sandras  <dsandras@gnome.org>

	* configure.in, Makefile.am: Applied patch from Brian Lu <Brian Lu sun
	com> to allow compilation with SUN Studio. Thanks!

2006-01-17  Julien Puydt  <jpuydt@free.fr>

	* src/gui/statusicon.h: Added some documentation.

2006-01-16  Damien Sandras  <dsandras@gnome.org>

	* src/devices/videoinput.cpp:
	Do not manipulate NULL frames.

2006-01-16  Julien Puydt  <jpuydt@free.fr>

	* lib/gmcontacts/gmcontacts-gmconf.cpp: Added copyright notice ; with
	some luck nobody was forgotten...

2006-01-16  Damien Sandras  <dsandras@gnome.org>

	* ekiga.schemas.in.in src/devices/audio.cpp 
	src/devices/videoinput.cpp src/endpoints/ekiga.cpp 
	src/gui/config.cpp src/gui/druid.cpp src/gui/main.cpp 
	src/gui/preferences.cpp src/gui/tools.cpp:
	String fixes thanks to Adam Weinberger <adamw gnome org>.
	
2006-01-16  Damien Sandras  <dsandras@gnome.org>

	* pixmaps/Makefile.am configure.in:
	Fixed make dist.
	
2006-01-16  Julien Puydt  <jpuydt@free.fr>

	* src/Makefile.am: Fixed "make dist".

2006-01-15  Damien Sandras  <dsandras@gnome.org>

	* po/POTFILES.in: Fixed.

2006-01-15  Damien Sandras  <dsandras@gnome.org>

	* Makefile.am: Fixed make dist.

	* src/gui/addressbook.cpp:
	Simplified menu.

2006-01-15  Damien Sandras  <dsandras@gnome.org>

	* src/clients/stun.cpp src/clients/stun.h 
	src/endpoints/accountshandler.cpp src/endpoints/manager.cpp 
	src/endpoints/manager.h src/gui/druid.cpp 
	src/gui/preferences.cpp: